Revision history for Perl extension DBIx::DataModel.

v2.40 24.06.2013
  - fix multiple inheritance bug in joins with the same table twice

v2.39 17.06.2013
  - fix https://rt.cpan.org/Ticket/Display.html?id=86219 (-where_on side effect)

v2.38 25.05.2013
  - fixed test in v2_generator.t when Lingua::Inflect::EN is not installed

v2.37 21.05.2013
  - removed workaround for DBD::Oracle bug (fixed in v1.62)

v2.36 18.04.2013
  - adapt for SQLAM 1.15 : bind values with types must be of shape
    [{dbd_attrs => \%datatype}, $orig_value] (like in DBIx::Class)

v2.35 14.04.2013
  - reintroduced tmp workaround for DBD::Oracle bug (will only be fixed in v1.61)
  - adapt for SQLAM 1.14

v2.34 08.04.2013
  - new arg for select() : "-where_on" (still experimental)
  - Schema::Generator automatically infers compositions from ON DELETE CASCADE
  - support for for values of shape [$orig_value, \%datatype] that will be
     passed to the 3-args form of DBI::bind_param()
  - remove workaround for https://rt.cpan.org/Ticket/Display.html?id=84170
     (was fixed in DBD::Oracle 1.60)

v2.33 24.03.2013
  - removed old workaround for DBD::Oracle bug 
       https://rt.cpan.org/Ticket/Display.html?id=76410
  - require minimal version 1.45 for DBD::Oracle (which fixed #76410)
  - tmp workaround for new DBD::Oracle bug 
       https://rt.cpan.org/Ticket/Display.html?id=84170

v2.32 19.02.2013
  - do the right thing when SQL::Abstract(array_datatypes => 1)
  - new feature: $schema->autolimit_firstrow(1);

v2.31 08.02.2013
  - Support for DBIx::RetryOverDisconnects in transactions
  - Schema::Generator uses Lingua::EN::Inflect::Phrase; test implemented
    using DBD::SQLite v1.38_01

v2.30 31.08.2012
  - changed check if should return pKey from "exists" to "defined" 
    in _singleInsert

v2.29 18.08.2012
  - fix insert() when primary key is over several columns
  - removed deprecated call to defined(@array)
  - declare POD =encoding so that Pod::Simple is happy

v2.28 03.06.2012